# Husker

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  husker.db  rustgmt.toml
migrations/: 20260423000000_initial_schema.sql
src/: deploy.rs  errors.rs  extractors.rs  main.rs  pipeline_e2e.rs  routes.rs  state.rs
src/deploy/: build.rs  git.rs  run.rs
src/docker/: network.rs
src/routes/: apps.rs  env_vars.rs  projects.rs  test_routes_helpers.rs
src/routes/apps/: tests.rs
src/routes/env_vars/: tests.rs
src/routes/projects/: tests.rs
tests/: poc_build_e2e.rs  poc_git_e2e.rs  poc_run_e2e.rs
tests/fixtures/build-context/: Dockerfile
tests/fixtures/build-context-broken/: Dockerfile
